--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -79,7 +79,7 @@
                     >
                     <a href="about.html" class="nav-item nav-link">Dịch vụ</a>
                     <div class="nav-item dropdown">
-                        <a href="/room" class="nav-item nav-link">Đặt phòng</a>
+                        <a href="/rooms" class="nav-item nav-link">Đặt phòng</a>
                     </div>
                     <a href="about.html" class="nav-item nav-link"
                     >Ưu đãi, khuyến mãi</a
